--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,10 @@
-<h1>新建用户</h1>
-<%= simple_form_for(@user, :html => { :class => "form-horizontal" })  do |f| %>
-	<%= f.input :username, :label => "用户名" %>
-	<%= f.input :email, :label => "E-mail"%>
-	<%= f.input :password, :label => "密码" %>
-	<%= f.input :password_confirmation, :label => "确认密码" %>
-<% end %>
+<div class="sign_up">
+	<h3>注册新用户</h3>
+	<%= simple_form_for(@user)  do |f| %>
+		<%= f.input :username, :label => "用户名" %>
+		<%= f.input :email, :label => "E-mail"%>
+		<%= f.input :password, :label => "密码" %>
+		<%= f.input :password_confirmation, :label => "确认密码" %>
+		<%= f.button :submit, :value => "确认", :class => "btn btn-primary" %>
+	<% end %>
+</div>
