--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,7 +3,9 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
+ *= require code_campo
  *= require_tree .
 */
 
-body{background-color: red;}
+body{padding-top: 80px;}
+a,ul,li{margin:0px;padding:0px;}
