--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <div class="content">
         <div class="row-fluid">
           <div class="span12">
-            <%= render 'layouts/messages' %>
+            <%= render 'shared/messages' %>
             <%= yield %>
           </div>
         </div>
