--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,10 @@
-<%= gravatar_for(@user) %>
 <h1><%= @user.username %></h1>
-<%= @user.email %>
+<%= gravatar_for(@user) %>
+<h3><%= @user.email %></h3>
+<% if login? %>
+<%binding.pry%>
+	<h5><%= @current_user.username %></h5>
+	<h5><%= @current_user.id %></h5>
+	<h5><%= session[:user_id] %></h5>
+	<h5><%= @current_user.email %></h5>
+<% end %>
