--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Users</h1>
+<h2><%= link_to "Topics", topics_path %></h2>
 <table class='table table-bordered table-hover'>
 	<tr>
 		<td>User</td>
