modefied topic page style

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -6,12 +6,14 @@
 			<div class="avatar">
 				<%= link_to gravatar_for_small(topic.user), user_path(topic.user) %>
 			</div>
+			<div class="replies">3</div>
 			<div class="right-info">
-				<div class="infos">
-					<div class="title"><%= link_to topic.title, topic_path(topic) %></div>
-					<div class="info">发布于：10min</div>
+				<div class="title"><%= link_to topic.title, topic_path(topic) %></div>
+				<div class="info">
+					<%= link_to topic.user.username, user_path(topic.user) %>
+					发布于<%= time_ago_in_words topic.created_at %>以前
+					&nbsp||&nbsp最后由<%= link_to "current",current_user %>于<%= time_ago_in_words topic.updated_at %>回复
 				</div>
-				<div class="replies">3</div>
 			</div>
 		</div>
 	<% end %>
