--- a/app/assets/stylesheets/code_campo.css
+++ b/app/assets/stylesheets/code_campo.css
@@ -27,42 +27,38 @@
 }
 .topics{
 	width: 700px;
-	height: 1050px;
 }
 .topic_line{
 	width :700px;
 	height: 49px;
 	background: #EEE;
 	border-bottom: 1px solid #ddd;
-	padding: 5px 0px;
+	padding: 5px;
 }
 .avatar{
 	width: 48px;
 	height: 48px;
-	float :left;
+	float : left;
 	display: inline-block;
 	margin: 1px 0 0 10px;
 }
-.right-info{
-	width: 640px;
-	height: 56px;
-	display: inline-block;
+.replies{
+	width: 48px;
+	height: 48px;
+	float: right;
+	line-height: 48px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
 }
-.infos{
-	width: 600px;
+.right-info{
 	display: inline-block;
 }
 .title{
-	font-size: 14px;
+	font-size: 16px;
 	margin: 5px 0px 5px 10px;
 }
 .info{
-	font-size: 10px;
+	font-size: 8px;
 	margin: 5px 0px 5px 10px;
-}
-.replies{
-	width: 30px;
-	height: 45px;
-  display: inline-block;
-  vertical-align: middle;
 }
