--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -2,7 +2,17 @@
 <h2><%= @topic.content %></h2>
 <h3><%= @topic.created_at %></h3>
 <h3><%= @topic.updated_at %></h3>
+<h3><%= @topic.active_time %></h3>
 <h3><%= @topic.tags %></h3>
 <h3><%= @topic.user.username%></h3>
+<ul>
+	<% @topic.replies.each do |reply|%>
+		<li><%= reply.content %></li>
+	<% end %>
+</ul>
+<%= simple_form_for @reply do |f| %>
+
+<% end %>
+<br />
 <%= link_to "修改", edit_topic_path(@topic) %>
 <%= link_to "删除", topic_path(@topic), :confirm => "你真的要删了我么？", :method => :delete%>
