--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -12,7 +12,7 @@
 				<div class="info">
 					<%= link_to topic.user.username, user_path(topic.user) %>
 					发布于<%= time_ago_in_words topic.created_at %>以前
-					&nbsp||&nbsp最后由<%= link_to "current",current_user %>于<%= time_ago_in_words topic.updated_at %>回复
+					&nbsp||&nbsp最后由<%= link_to current_user.username,current_user %>于<%= time_ago_in_words topic.updated_at %>回复
 				</div>
 			</div>
 		</div>
